test/src/e2e_vm_tests/test_programs/should_pass/language/module_dep_self/src/a.sw
library;

use ::a::*;

pub fn a() { }
