test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/event_indexed_attr.sw
library;

#[event]
pub struct Ok {
    #[indexed]
    a: u32
}

#[event(arg = "")]
pub struct NotOk { }
